# invntory-

./: README.md  pyproject.toml
inventory_system/: .gitignore  db.sqlite3  pyproject.toml  requirements.txt  run_inventory.py  run_inventory.spec
inventory_system/inventory/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
inventory_system/inventory/migrations/: 0001_initial.py
inventory_system/inventory/templates/inventory/: account.html  add_product.html  base.html  dashboard.html  make_sale.html  product_list.html
inventory_system/inventory_system/: asgi.py  settings.py  urls.py  wsgi.py
